# gtk

docs/reference/: meson.build
gdk/: Makefile.am
gdk/wayland/: gdkwindow-wayland.c
gtk/: Makefile.am  gtkwindow.c  meson.build
